@@ -1,5 +1,10 @@
 2007-12-14  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c (invoked_send_fake_exit): Move function
+	definition closer to other invoked_ functions.
+
+2007-12-14  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/launcher.c (kindergarten_insert_child): Do not call
 	invoked_send_fake_exit on failure.
 	(main): If kindergarten_insert_child failed call
